--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vitalplus",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -9,10 +9,26 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~54.0.23",
+    "@react-native-community/datetimepicker": "8.4.4",
+    "expo": "~54.0.24",
+    "expo-constants": "~18.0.10",
+    "expo-device": "~8.0.9",
+    "expo-linking": "~8.0.9",
+    "expo-notifications": "~0.32.13",
+    "expo-router": "~6.0.15",
+    "expo-sqlite": "~16.0.9",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
-    "react-native": "0.81.5"
+    "react-dom": "19.1.0",
+    "react-native": "0.81.5",
+    "react-native-calendars": "^1.1313.0",
+    "react-native-safe-area-context": "5.6.2",
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
+    "react-native-web": "^0.21.0"
+  },
+  "overrides": {
+    "react-native-safe-area-context": "5.6.2"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
